--- a/views/index.html
+++ b/views/index.html
@@ -406,7 +406,7 @@
             </div>
         </div>
     </section>
-    
+
 
    <!-- Projects Section -->
     <section id="projects" class="py-20 relative">
@@ -743,7 +743,7 @@
             </div>
             <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
                 <p>&copy; 2025 Jeeva G. All rights reserved.</p>
-                <p class="mt-2">Made with <i class="fas fa-heart text-red-500"></i></p>
+                <p class="mt-2">Made with ❤️<i class="fas fa-heart text-red-500"></i></p>
             </div>
         </div>
     </footer>
