--- a/views/index.html
+++ b/views/index.html
@@ -7,24 +7,24 @@
      <!-- <link rel="canonical" href="https://jeevag-portfolio.netlify.app/"> --> 
       <meta name="apple-mobile-web-app-status-bar" content="#202125"> 
       <title>Jeeva G | Portfolio</title>
-       <link rel="stylesheet" href="/src/css/style.css">
-        <link rel="stylesheet" href="/src/css/tailwind.css">
-         <link rel="stylesheet" href="/src/css/globe.css" />
+       <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/tailwind.css">
+         <link rel="stylesheet" href="./css/globe.css" />
           
 
-          <link rel="icon" type="image/x-icon" href="/public/favicon/favicon.ico"> 
-          <link rel="shortcut icon" href="/public/favicon/favicon.ico" type="image/x-icon"> 
-          <link rel="icon" type="image/svg+xml" href="/public/favicon/favicon.svg"> 
-          <link rel="mask-icon" href="/public/favicon/favicon.svg" color="#ffbade"> 
-          <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon/favicon-16x16.png"> 
-          <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon/favicon-32x32.png">
-           <link rel="icon" type="image/png" sizes="192x192" href="/public/favicon/favicon-192x192.png"> 
-           <link rel="icon" type="image/png" sizes="512x512" href="/public/favicon/favicon-512x512.png"> 
-           <link rel="apple-touch-icon" type="image/png" href="//publicfavicon/apple-touch-icon.png">
+          <link rel="icon" type="image/x-icon" href="./favicon/favicon.ico"> 
+          <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon"> 
+          <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg"> 
+          <link rel="mask-icon" href="./favicon/favicon.svg" color="#ffbade"> 
+          <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png"> 
+          <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+           <link rel="icon" type="image/png" sizes="192x192" href="./favicon/favicon-192x192.png"> 
+           <link rel="icon" type="image/png" sizes="512x512" href="./favicon/favicon-512x512.png"> 
+           <link rel="apple-touch-icon" type="image/png" href="./favicon/apple-touch-icon.png">
 
            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""> 
            <link rel="preconnect" href="https://fonts.googleapis.com"> 
-           <link rel="manifest" href="/public/manifest.json"> 
+           <link rel="manifest" href="./manifest.json"> 
         
             <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> 
             <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.min.js"></script> 
@@ -770,9 +770,9 @@
             </div>
         </div>
     </footer>
-    <script   type="module" src="/src/js/globe.js"></script>
-   <script type="module" src="/src/js/app.js"></script>
-   <script  type="module"  src="/src/js/dhws-data-injector.js"></script>
+    <script   type="module" src="./js/globe.js"></script>
+   <script type="module" src="./js/app.js"></script>
+   <script  type="module"  src="./js/dhws-data-injector.js"></script>
   </body>
     </html>   
        
